# REMAudioWeb

./: .env  LICENSE  README.md  docker-compose.yml  matrix-engine  settings.json  url.json  users-cli
backend/: .env  Cargo.toml  Dockerfile  settings.json
backend/migrations/: 20240216123500_init.up.sql  20250328082157_delete_email_field.up.sql  20250408081219_create_channels_table.up.sql  20250408103351_add_source_field_in_channels.down.sql  20250408103351_add_source_field_in_channels.up.sql  20250411183342_adding_identifier_to_each_channel.down.sql  20250411183342_adding_identifier_to_each_channel.up.sql  20250412121356_remove_user_id_add_matrix_table.down.sql  20250412121356_remove_user_id_add_matrix_table.up.sql  20250412141028_latest_socket_flag.down.sql  20250412141028_latest_socket_flag.up.sql  20250429180208_presets_table.down.sql  20250429180208_presets_table.up.sql  20250506082259_add_optional_latest_preset_sockets.down.sql  20250506082259_add_optional_latest_preset_sockets.up.sql
backend/src/: auth_middleware.rs  configs.rs  db.rs  env_dns.rs  hasher.rs  interfaces.rs  lib.rs  main.rs  schemas.rs  services.rs
backend/src/audio_engine/: defs.rs  lib.rs  matrix_mixing.rs  mod.rs  mute.rs  presets.rs  volume.rs
backend/src/engine/: defs.rs  lib.rs  mod.rs  mute.rs  presets.rs  tests.rs  volume.rs
backend/src/engines/: mod.rs  sections.rs
backend/src/utils/: auth_middleware.rs  common.rs  configs.rs  db.rs  db_utils.rs  hasher.rs  hasher_utils.rs  jwt_utils.rs  mod.rs
backend/src/video_engine/: camera_presets_lib.rs  defs.rs  mod.rs  (+2 more)
backend/tests/: engine_commands_tests.rs  engine_tests.rs  video_engine.rs
(+180 files in other folders)
